--- a/public/style.css
+++ b/public/style.css
@@ -9,51 +9,35 @@ html{
 }
 
 body {
-    font: 13px Helvetica, Arial;
+    font: 13px;
     height: 100%;
 }
 
 form {
-	 background: linear-gradient(to right, #2274a5, #e3ebff);
-   /* position: fixed;
-    bottom: 0; */
+	background: linear-gradient(to right, #0082e7, #f3f3f3);
     width: 100%;
-    height: 7%;
+    height: 10%;
     padding: .5%;
 }
 
 form input {
     border: 0;
-    /*padding: 0.5%;*/
-    padding-left: 1%;
-    width: 89.5%;
-    margin-right: .5%;
-    height: 95%;
+    padding-left: 15px;
+    width: 89%;
+    margin-right: 0.5%;
+    height:65%
 }
-
-form input:hover{
-	border: 2px solid #ffffff;
-}
-
 
 form button {
-    width: 9%;
-    height: 95%;
-    /*background: rgb(130, 224, 255);*/
+    width: 10%;
+    height: 65%;
     background: #2274a5;
     border: none;
     padding: 10px;
 }
 
-form button:hover{
-	background: #3385b6;
-}
-
 #messages {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
-    /*width: 85%;*/
     width: 100%;
     max-height: 100%;
     overflow-y: auto;
@@ -66,24 +50,18 @@ form button:hover{
     padding: 5px 10px;
 }
 
-/*
-#messages li:nth-child(odd) {
-    background: #eee;
-}*/
-
-#topBar{
-	height: 7%;
-	width: 100%;
-	margin: 0;
-	padding:0; 
-	/*background-color: #2274a5;*/
-	background: linear-gradient(to right, #2274a5, #e3ebff);
+#users li {
+    padding: 5px 10px;
 }
 
-#usersOnline {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+#header{
+	height: 5%;
+	width: 100%;
+	background: linear-gradient(to right, #0082e7, #f3f3f3);
+}
+
+#users{
+    font: 15px;
     width: 100%;
     max-height: 100%;
     overflow-y: auto;
@@ -91,40 +69,30 @@ form button:hover{
     position: absolute;
     bottom: 0;
 }
-#usersOnline li {
-    padding: 5px 10px;
-}
-/*
-#usersOnline li:nth-child(odd) {
-    background: #eee;
-}*/
 
 #Wrapper{
-	 line-height: 1.5em;
     height: 86%;
     width: 100%;
     position: relative;
     border: 1px solid black;
-    background-color: #e9f1f7;
 }
 
 #messageContainer{
     height: 100%;
     width: 85%;
-    border: 1px solid black;
+    border: 3px solid black;
     position: relative;
-    /*margin-bottom: 10%;*/
 }
 
-#oUsersContainer{
+#userContainer{
 	height: 100%;
-	border: 1px solid black;
-	position: absolute;
-   bottom: 0;
-   left: 85%;
-   width: 15%;
+	border: 3px solid black;
+    position: absolute;
+    bottom: 0;
+    left: 85%;
+    width: 15%;
 }
 
-.chatMessage{
-	display: inline;
+.ttext {
+    font-weight: bold;
 }
